<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="addfriend">加为好友</string>
    <string name="address">地址：</string>
    <string name="app_name">FoodChainR</string>
    <string name="back">返回</string>
    <string name="call">呼叫</string>
    <string name="cancel">取消</string>
    <string name="cooktime">烹饪时间：</string>
    <string name="name">名字：</string>
    <string name="intro">简介：</string>
    <string name="price">价格：</string>
    <string name="refresh">刷新</string>
    <string name="waiterid">服务生</string>
    <string name="level">级别：</string>
    <string name="edit">编辑</string>
    <string name="tel">订餐电话：</string>
    <string name="sms">短信订餐：</string>
    <string name="num">数字</string>
    <string name="word">文字</string>
    <string name="menu">菜单</string>
    <string name="type">类别</string>
    <string name="sendmessage">发私信</string>
    <string name="ok">OK</string>
    <string name="cooker">厨师</string>
    <string name="weekday">星期几</string>
    <string name="date">日期</string>
    <string name="count">数量</string>
    <string name="info">信息</string>
    <string name="more">加载更多</string>
    <string name="add">添加</string>
    <string name="save">保存</string>
    <string name="setprice">请输入价格</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>
    <string name="sendmail">发私信</string>
    <string name="sayhi">打招呼</string>
    <string name="point">积分</string>
    <string name="credit">信用</string>
    <string name="notorder">什么都没有点</string>
    <string name="id">ID</string>
    <string name="seatcount">座位数</string>
    <string name="notabledatatip">没有餐桌数据，请点此创建</string>
    <string name="code">编号</string>
    <string name="tablecount">桌子数量</string>
    <string name="openrestaurant">开始营业</string>
    <string name="closerestaurant">结束营业</string>
    <string name="message">消息</string>
    <string name="create_table_help">创建完新桌子类型之后，除了数量都不能修改</string>
    <string name="nohalldata">没有开业，请到详情界面设置</string>
    <string name="billcount">订单数量</string>
    <string name="customercount">顾客数量</string>
    <string name="zero">0</string>
    <string name="freeseatcount">空座位数</string>
    <string name="filter">筛选</string>
    <string name="table">桌子</string>
    <string name="customer">顾客</string>
    <string name="employee">雇员</string>
    <string name="vip">会员</string>
    <string name="cleaner">保洁员</string>
    <string name="waiter">服务生</string>
    <string name="nobilldata">没有账单数据</string>
    <string name="time">时间</string>
    <string name="from">From</string>
    <string name="yuan">元</string>
    <string name="min">分钟</string>
    <string name="recommend">推荐</string>
    <string name="createtime">创建时间</string>
    <string name="billdetail">订单详情</string>
    <string name="employee_detail">雇员详情</string>
    <string name="position">职位</string>
    <string name="duty">考勤</string>
    <string name="gender">性别</string>
    <string name="cometime">上班时间</string>
    <string name="leavetime">下班时间</string>
    <string name="send">发送</string>
    <string name="commenttime">发表于：</string>
    <string name="wait">等待</string>
    <string name="feedback">反馈</string>
    <string name="hall">大厅</string>
    <string name="talktitle">与……对话</string>
    <string name="search">搜索</string>
    <string name="today">今天</string>
    <string name="noresult_createnew">找到0个结果，点此创建</string>
    <string name="create">新建</string>
    <string name="createcase">创建新菜</string>
    <string name="casedetail">菜品详情</string>
    <string name="style">类型</string>
    <string name="kitchen">厨房</string>
    <string name="chat">聊天</string>
    <string name="bill">账单</string>
    <string name="nodata">加载失败</string>
    <string name="manage">管理</string>
    <string name="pleaseinputname">请输入名称</string>
    <string name="complete">完成</string>
    <string name="addnewstyle">添加新类型</string>
    <string name="store">库存</string>
    <string name="state">状态</string>
    <string name="addnewcase">添加新菜肴</string>
    <string name="pleaseinputusername">请输入用户名</string>
    <string name="pleaseinputpassword">请输入密码</string>
    <string name="forgotpassword">忘记密码</string>
    <string name="autologin">自动登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="pleaseconfirmpassword">请再次输入密码</string>
    <string name="age">年龄</string>
    <string name="about">关于我们</string>
    <string name="checkupdate">检查更新</string>
    <string name="exit">退出</string>
    <string name="versioninfo">版本信息</string>
    <string name="version">1.0</string>
    <string name="mark">评分</string>
    <string name="submit">提交</string>
    <string name="dianping">点评</string>
    <string name="pleaseinputfeedbacktopic">请给意见反馈加个标题</string>
    <string name="retrieve">找回密码</string>
    <string name="update">检查更新</string>
    <string name="order">排序</string>
    <string name="location">地区</string>
    <string name="province">省份</string>
    <string name="delete">删除</string>
    <string name="servenumber">客服电话 010&#8211;58852308</string>
    <string name="grade">年级</string>
    <string name="mycomment">我发表的评论</string>
    <string name="apprecommended">推荐的应用</string>
    <string name="mysettings">我的设置</string>
    <string name="follow">加关注</string>
    <string name="sendcomment">发评论</string>
    <string name="brief">简介</string>
    <string name="pic">实地图片</string>
    <string name="video">宣传视频</string>
    <string name="wangyoudianping">网友点评</string>
    <string name="selectcity">切换城市</string>
    <string name="searchtxt">请输入幼儿园名字、区域、商圈</string>
    <string name="changeview">切换视图</string>
    <string name="title">标题</string>
    <string name="pleaseinputemail">请输入邮箱</string>
    <string name="logoff">未登录</string>
    <string name="userinfo">用户信息</string>
    <string name="myinfo">我的资料</string>
    <string name="email">邮箱</string>
    <string name="nickname">昵称</string>
    <string name="username">用户名</string>
    <string name="birthdate">出生日期</string>
    <string name="signature">签名</string>
    <string name="resetpassword">重置密码</string>
    <string name="bitian">带星号的为必填项</string>
    <string name="ihavereadandagree">我已看过并同意</string>
    <string name="webbrowser">浏览器</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="secret">保密</string>
    <string name="oldpassword">请输入旧密码</string>
    <string name="newpassword">请输入新密码</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="editstyle">编辑分类</string>
    <string name="casestyledetail">菜品类别详情</string>
    <string name="addCase">添加菜</string>
    <string name="addCaseStyle">添加菜类</string>
    <string name="addTable">添加餐桌</string>
    <string name="addTableStyle">添加桌型</string>
    <string name="manageMenu">管理菜单</string>
    <string name="manageSeat">管理餐位</string>
    <string name="pleaseInputStyleName">请输入类型名称</string>
</resources>