<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/waiter_pic"
        android:layout_width="50dp"
        android:layout_height="80dp"
        android:padding="5dp"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/waiter_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiterid" />

    <TextView
        android:id="@+id/waiter_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level" />

    <TextView
        android:id="@+id/waiter_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/waiter_pic"
        android:text="@string/name" />

    <TextView
        android:id="@+id/waiter_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro" />

    <ImageView
        android:id="@+id/waiter_busy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/icon" />

</RelativeLayout>