<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/bl_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/code"
        android:textColor="@android:color/black"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/bl_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/bl_id"
        android:text="@string/type"
        android:textColor="@android:color/black" />
    <TextView
        android:id="@+id/bl_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bl_id"
        android:text="@string/address"
        android:textColor="@android:color/black" />
    <TextView
        android:id="@+id/bl_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/bl_type"
        android:text="@string/price"
        android:textColor="@android:color/black" />
    <TextView
        android:id="@+id/bl_paid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />
    <TextView
        android:id="@+id/bl_createtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/bl_address"
        android:text="@string/createtime"
        android:textColor="@android:color/black" />
</RelativeLayout>