<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    android:orientation="vertical" >
    <ImageView
        android:id="@+id/photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center"
        android:background="@drawable/user_default_icon"
        android:contentDescription="@string/app_name" />
    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/edit" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/photo"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/photo"
        android:layout_toRightOf="@+id/photo"
        android:orientation="vertical"
        android:padding="5dp" >
        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/username"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/email"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/nickname"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/signature"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/signature"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>