<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <FrameLayout
        android:id="@+id/el_iconlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >
        <ImageView
            android:id="@+id/el_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="fill"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/seat_icon_default" />
        <TextView
            android:id="@+id/el_status"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/darker_gray"
            android:text="@string/status"
            android:textColor="@android:color/white" />
    </FrameLayout>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/el_iconlayout"
        android:background="@android:color/white" >
        <TableRow>
            <TextView
                android:id="@+id/el_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position" />
            <TextView
                android:id="@+id/el_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />
            <TextView
                android:id="@+id/el_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id" />
            <TextView
                android:id="@+id/el_id_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/el_gender_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender" />
            <TextView
                android:id="@+id/el_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender" />
            <TextView
                android:id="@+id/el_level_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level" />
            <TextView
                android:id="@+id/el_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/el_cometime_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cometime" />
            <TextView
                android:id="@+id/el_cometime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cometime" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/el_leavetime_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leavetime" />
            <TextView
                android:id="@+id/el_leavetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leavetime" />
        </TableRow>
    </TableLayout>
</RelativeLayout>