<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    android:orientation="vertical" >
    <ImageView
        android:id="@+id/photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center"
        android:background="@drawable/user_default_icon"
        android:contentDescription="@string/app_name" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/photo"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/photo"
        android:layout_toRightOf="@+id/photo"
        android:orientation="vertical"
        android:padding="5dp" >
        <TextView
            android:id="@+id/resetpassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:autoLink="all"
            android:gravity="left|center_vertical"
            android:text="@string/resetpassword"
            android:textSize="18sp" />
        <RelativeLayout
            android:id="@+id/passwordedit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:visibility="gone" >
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:layout_toLeftOf="@+id/submit"
                android:hint="@string/oldpassword"
                android:inputType="textPassword"
                android:textSize="18sp" />
            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/submit" />
        </RelativeLayout>
        <EditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:hint="@string/nickname"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/signature"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:hint="@string/signature"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/photo"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="10dp" >
        <Button
            android:id="@+id/ok"
            style="@style/LoginBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/save" />
        <Button
            android:id="@+id/cancel"
            style="@style/LoginBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>
</RelativeLayout>