<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher" />
    <TextView
        android:id="@+id/versioninfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/logo"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:padding="3dp"
        android:text="@string/versioninfo" />
    <TextView
        android:id="@+id/versionnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/versioninfo"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/version" />
    <TextView
        android:id="@+id/aboutus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/versionnumber"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:padding="3dp"
        android:text="@string/about" />
    <TextView
        android:id="@+id/aboutusinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutus"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/app_name" />
    <TextView
        android:id="@+id/servenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutusinfo"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/img_dianhua"
        android:drawablePadding="2dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/servenumber" />
</RelativeLayout>